version 1.1
	* older and newer link at the top no working
	* bug with path to the jquery.js file
	* some statistics

version 1.0 ()
+ jumpin.banana
	* tag suggest was not working correctly.
	* tag rename feature implemented
	* tag rename case sensitive problem
	* add bookmark only if url and title are not empty
	* tag delete is available now. It moves the selected bookmarks
		to another one
	* bookmarks without a tag can be selected now
	* Fix the text/html content type going that's snapshotted
		This is not needed. Since we use the charset info
		to determine utf, we need this information
	* Insert SQL more save now

Tue Jul 14 21:38 EST 2009  Luke Reeve   <luke@neuro-tech.net>

	* Fix the option "proxy_host" not being saved correctly.

Sun Jul 12 11:00 EST 2009  Luke Reeves  <luke@neuro-tech.net>

	* Fixed the Perl 5.10 module reloading bug.
	* Fixed snapshotting functionality

Sat Jul 11 23:30 EST 2009  Luke Reeves  <luke@neuro-tech.net>

	* Dusted off the codebase, kicked the tires and finally
	  finished off the git migration.

Mon Mar 27 18:59 EST 2006  Luke Reeves  <luke@neuro-tech.net>

	* Added an option for disabling mod_rewrite support
	* Added a prefix option for database tables

Tue Mar 21 19:34 EST 2006  Luke Reeves	<luke@neuro-tech.net>

	* Fix the export system

Tue Feb 21 12:30 EST 2006  Luke Reeves  <luke@neuro-tech.net>

	* Fix up database connectivity for newer PostgreSQL
	  libraries
	* Incorporate patch from Paul Boin that allows importing
	  of regular del.icio.us backups (as opposed to only
	  supporting exports as before)

Mon Nov 21 12:41 EST 2005  Luke Reeves  <luke@neuro-tech.net>

	* Fixed some of the cleanup process for snapshot deletion
	* Added a "Fetch Related" function, so that the snapshot
	  tool can grab related objects
	* Work on the tag tools - delete and rename tags

Fri Nov 04 09:00 EST 2005  Luke Reeves	<luke@neuro-tech.net>

	* Database fix (thanks to Jutta Horstmann)