@@ -2,6 +2,7 @@ version 1.1
 	* older and newer link at the top no working
 	* bug with path to the jquery.js file
 	* some statistics
+	* options can be ordered now
 
 version 1.0 ()
 + jumpin.banana
